--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -13,7 +13,7 @@ tags:
 
 我们先解决上节留下的疑问：如何解决懒加载过程中的闪烁问题？`startTransition`是React官方给出的解决方案
 
-<<< @\codes\react-demo\src\pages\react18\transition\lazyload_optimization.jsx#transition
+<<< @/codes/react-demo/src/pages/react18/transition/lazyload_optimization.jsx#transition
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/transition.gif)
 
@@ -75,7 +75,7 @@ root.render(<App/>)
 
 **我们先用传统方法编写一遍：**
 
-<<< @\codes\react-demo\src\pages\react18\transition\debounce\old.jsx
+<<< @/codes/react-demo/src/pages/react18/transition/debounce/old.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/transition.gif)
 
@@ -89,7 +89,7 @@ root.render(<App/>)
 1. 原先由一个state : `searchKey`来同时控制input框的值渲染和列表渲染，为了区分优先级，我们分成两个state : `inputValue（input框输入值）`和`searchKey（控制列表渲染）`
 2. 我们将`searchKey`的控制放入`startTransition`函数中，将与其相关的后续渲染更新标识为低优先级任务
 
-<<< @\codes\react-demo\src\pages\react18\transition\debounce\new.jsx#Debounce{2-3,14-20,26}
+<<< @/codes/react-demo/src/pages/react18/transition/debounce/new.jsx#Debounce{2-3,14-20,26}
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/transition_new.gif)
 
@@ -99,7 +99,7 @@ root.render(<App/>)
 
 我们可以通过`useTransition`方法临时使用`concurrent特性`。
 
-<<< @\codes\react-demo\src\pages\react18\transition\useTransition.tsx
+<<< @/codes/react-demo/src/pages/react18/transition/useTransition.tsx
 
 
 # 回到开头
@@ -120,6 +120,6 @@ root.render(<App/>)
 
 全部代码：
 
-<<< @\codes\react-demo\src\pages\react18\transition\lazyload_optimization.jsx
+<<< @/codes/react-demo/src/pages/react18/transition/lazyload_optimization.jsx
 
 
