--- a/docs/01.前端/01.React/01.进阶/03.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/03.useReducer.md
@@ -27,7 +27,7 @@ tags:
 
 我们先用`useState`来编写一个简单的选择器例子
 
-<<< @\codes\react-demo\src\pages\react18\useReducer\useState.jsx
+<<< @/codes/react-demo/src/pages/react18/useReducer/useState.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/useState.gif)
 
@@ -35,18 +35,18 @@ tags:
 
 1. 编写初始State结构`initalState`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#initalState
+<<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#initalState
 
 1. 定义`信号`的类型，并以此定义`reducer`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#reducer
+<<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#reducer
 
 3. 调用`useReducer`生成`状态state和发信器dispatch`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#useReducer
+<<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#useReducer
 
 4. 在用户交互的地方发出信号，让`reducer`处理并生成新的`state`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#dispatch{6,14-16}
+<<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#dispatch{6,14-16}
 
 # 强制刷新
