--- a/docs/01.前端/01.React/01.进阶/04.HOC.md
+++ b/docs/01.前端/01.React/01.进阶/04.HOC.md
@@ -21,7 +21,7 @@ tags:
 
 假设我们要为当前组件绑定上一个日志系统，显然这是一个公共系统可以用于任何组件上，那么我们可以这样将其提取出来成为一个包装器：
 
-<<< @\codes\react-demo\src\pages\react18\HOC\index.jsx
+<<< @/codes/react-demo/src/pages/react18/HOC/index.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429115044.png)
 
@@ -72,12 +72,12 @@ class Hoc extends Component {
 
 前面说到@语法糖会将后面的类作为**第一个参数**传入方法中，如果我们想要传入更多参数，需要**再包装一层函数**，函数的作用是**返回一个包装器**：
 
-<<< @\codes\react-demo\src\pages\react18\HOC\params.jsx{22-24}
+<<< @/codes/react-demo/src/pages/react18/HOC/params.jsx{22-24}
 
 
 # 应用：一个简陋的redux模型
 
-<<< @\codes\react-demo\src\pages\react18\HOC\redux.jsx
+<<< @/codes/react-demo/src/pages/react18/HOC/redux.jsx
 
 # 关于React developer tools调试HOC
 
@@ -100,4 +100,4 @@ class Hoc extends Component {
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429160446.png)
 
-<<< @\codes\react-demo\src\pages\react18\HOC\ref.jsx
+<<< @/codes/react-demo/src/pages/react18/HOC/ref.jsx
