--- a/docs/01.前端/01.React/01.进阶/05.ref.md
+++ b/docs/01.前端/01.React/01.进阶/05.ref.md
@@ -25,7 +25,7 @@ tags:
 
 `createRef`，`useRef`功能一致：创建一个ref对象。分别为`React.API`的写法与`hooks`的写法
 
-<<< @\codes\react-demo\src\pages\react18\ref\index.jsx
+<<< @/codes/react-demo/src/pages/react18/ref/index.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220428153905.png)
 
@@ -33,7 +33,7 @@ tags:
 
 `callback ref` : 为DOM对象的ref传入一个回调函数`(node)=>{}`，该回调函数会在React组件/DOM元素`加载/卸载`时调用，`node`即元素实例。可以在创建、卸载时对元素进行一些操作，也可以将实例赋给某个对象以供后续调用。
 
-<<< @\codes\react-demo\src\pages\react18\ref\callbackRef.jsx
+<<< @/codes/react-demo/src/pages/react18/ref/callbackRef.jsx
 
 
 
@@ -43,7 +43,7 @@ tags:
 
 获取React组件的实例较为简单，组件会自动接收父元素传递的ref属性，绑定this并传递回父组件。
 
-<<< @\codes\react-demo\src\pages\react18\ref\component-class.jsx
+<<< @/codes/react-demo/src/pages/react18/ref/component-class.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429105541.png)
 
@@ -65,7 +65,7 @@ tags:
 **3. 将`ref`绑定到某一个`DOM元素`上**
 4. 在父组件上使用获取到的`ref`实例
 
-<<< @\codes\react-demo\src\pages\react18\ref\forwardRef.jsx
+<<< @/codes/react-demo/src/pages/react18/ref/forwardRef.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429110541.png)
 
@@ -84,7 +84,7 @@ tags:
 **3. 将`ref`传递进`useImperativeHandle`方法，将ref替换成一个新的自定义的实例对象**
 4. 在父组件上使用获取到的`ref`实例
 
-<<< @\codes\react-demo\src\pages\react18\ref\useImperativeHandle.jsx
+<<< @/codes/react-demo/src/pages/react18/ref/useImperativeHandle.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429110624.png)
 
