--- a/docs/01.前端/01.React/01.进阶/06.优化相关.md
+++ b/docs/01.前端/01.React/01.进阶/06.优化相关.md
@@ -23,12 +23,12 @@ React.memo(组件,比较函数（可选）)
 
 我们编写父组件和子组件，可以看到当`foo`值不同时，子组件会进行渲染，当相同时，强制刷新渲染，但依然重用了子组件。
 
-<<< @\codes\react-demo\src\pages\react18\memo\index.jsx
+<<< @/codes/react-demo/src/pages/react18/memo/index.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/memo.gif)
 
 你可以自己编写选择是否重新渲染的函数：
 
-<<< @\codes\react-demo\src\pages\react18\memo\compare.jsx
+<<< @/codes/react-demo/src/pages/react18/memo/compare.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/meomo2.gif)
