--- a/docs/01.前端/01.React/01.进阶/08.suspense.md
+++ b/docs/01.前端/01.React/01.进阶/08.suspense.md
@@ -21,7 +21,7 @@ tags:
 
 这不是我们今天的主题，这里只给出代码，详细请看[数据懒加载](/pages/326b58/)
 
-<<< @\codes\react-demo\src\pages\react18\lazyLoad.jsx
+<<< @/codes/react-demo/src/pages/react18/lazyLoad.jsx
 
 # fetch Data
 
@@ -36,5 +36,5 @@ tags:
 -   若`throw`出其他对象，不由`Suspense`处理，继续向外层抛出错误，可以自定义`ErrorBoundary`来处理。
 -   若`return `一个值，则视为请求完成，继续组件的渲染。
 
-<<< @\codes\react-demo\src\pages\react18\suspense\suspense.jsx
+<<< @/codes/react-demo/src/pages/react18/suspense/suspense.jsx
 
