--- a/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
+++ b/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
@@ -41,4 +41,4 @@ tags:
 
 # 基本使用例子
 
-<<< @\codes\react-demo\src\pages\react18\errorBoundary.jsx
+<<< @/codes/react-demo/src/pages/react18/errorBoundary.jsx
