--- a/docs/01.前端/01.React/01.进阶/10.一些常见的小问题.md
+++ b/docs/01.前端/01.React/01.进阶/10.一些常见的小问题.md
@@ -15,7 +15,7 @@ tags:
 
 我们先来看一段代码，我们希望在一个列表有值时将其渲染出来，如果没有值则不显示
 
-<<< @\codes\react-demo\src\pages\react18\other\render.jsx
+<<< @/codes/react-demo/src/pages/react18/other/render.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220504222526.png)
 
