--- a/docs/01.前端/01.React/04.recoil/01.入门.md
+++ b/docs/01.前端/01.React/04.recoil/01.入门.md
@@ -43,7 +43,7 @@ const [fontSize, setFontSize] = useRecoilState(fontSizeState);
 
 我们使用官方的示例来快速理解`atom`: 
 
-<<< @\codes\react-demo\src\pages\recoil\begin\atom.jsx
+<<< @/codes/react-demo/src/pages/recoil/begin/atom.jsx
 
 
 ### Selector
@@ -52,5 +52,5 @@ const [fontSize, setFontSize] = useRecoilState(fontSizeState);
 
 官方的实例：
 
-<<< @\codes\react-demo\src\pages\recoil\begin\selector.jsx
+<<< @/codes/react-demo/src/pages/recoil/begin/selector.jsx
 
