--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -41,7 +41,7 @@ function selector<T>({
 
 以汇率转化为例：
 
-<<< @\codes\react-demo\src\pages\recoil\selector\multiple.jsx
+<<< @/codes/react-demo/src/pages/recoil/selector/multiple.jsx
 
 # set方法
 
@@ -49,7 +49,7 @@ function selector<T>({
 
 **但是**，这个`set`方法并不是像你想的那样去修改自身的值，它**只能修改其他atom和selector**。比如我们编写一两个相互转化的input框
 
-<<< @\codes\react-demo\src\pages\recoil\selector\set.jsx
+<<< @/codes/react-demo/src/pages/recoil/selector/set.jsx
 
 
 # 异步Selectors
@@ -62,7 +62,7 @@ function selector<T>({
 - 在`get`方法中使用`async和await`包裹数据库请求，并返回请求结果
 - 通过`React.Suspense`组件来渲染请求请求未返回时的展示数据
 
-<<< @\codes\react-demo\src\pages\recoil\selector\async.jsx
+<<< @/codes/react-demo/src/pages/recoil/selector/async.jsx
 
 
 # selectorFamily
