--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
@@ -19,7 +19,7 @@ tags:
 
 # 基本使用
 
-<<< @\codes\vue-demo\pages\vue3\ref\index.vue
+<<< @/codes/vue-demo/pages/vue3/ref/index.vue
 
 `ref(Object)`是原有对象的引用，修改原有对象和ref对象实际上操作的是同一对象。
 
@@ -36,19 +36,19 @@ tags:
 
 想要访问`ref对象`需要以`ref.value`进行取值，我们可以方便的用`unref`函数进行解耦操作。
 
-<<< @\codes\vue-demo\pages\vue3\ref\unref.vue
+<<< @/codes/vue-demo/pages/vue3/ref/unref.vue
 
 # toRef
 
 该方法在处理响应式对象的**可选属性**上很有用，能够将可选属性转成空的`ref对象`，以便在后续函数中做统一化处理：
 
-<<< @\codes\vue-demo\pages\vue3\ref\toRef.vue
+<<< @/codes/vue-demo/pages/vue3/ref/toRef.vue
 
 # toRefs
 
 假设这样一种场景：我们使用`reactive函数`生成了一些响应式对象，我们希望单独操作它的某个属性，我们习惯性的用`Es6`的解构语法获取属性并对其操作：
 
-<<< @\codes\vue-demo\pages\vue3\ref\toRefs\bad.vue
+<<< @/codes/vue-demo/pages/vue3/ref/toRefs/bad.vue
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/torefs.gif)
 
@@ -56,18 +56,18 @@ tags:
 
 为了解决这个问题，我们需要将响应式对象转化为一组`ref对象`，使用`toRefs`
 
-<<< @\codes\vue-demo\pages\vue3\ref\toRefs\good.vue{15,20-22}
+<<< @/codes/vue-demo/pages/vue3/ref/toRefs/good.vue{15,20-22}
 
 # customRef
 
 
 `customRef`的原理就是`ES6的Proxy`，我们先来看一个`Proxy`例子：
 
-<<< @\codes\javaScript\es6\proxy\vue.js
+<<< @/codes/javaScript/es6/proxy/vue.js
 
 `customRef函数`将复杂的依赖操作包含在`track和trigger`中，并允许我们在`getter/setter`时除了更新依赖外有了更多的可操作空间
 
-<<< @\codes\vue-demo\pages\vue3\ref\customRef\index.vue
+<<< @/codes/vue-demo/pages/vue3/ref/customRef/index.vue
 
 :::tip
 `track`，`trigger`方法的功能是收集和触发依赖（更新页面）.
@@ -77,7 +77,7 @@ tags:
 
 官方的防抖例子：
 
-<<< @\codes\vue-demo\pages\vue3\ref\customRef\debounce.vue
+<<< @/codes/vue-demo/pages/vue3/ref/customRef/debounce.vue
 
 
 假设场景：`v-model = "data"`用户连续输入【123】，流程如下：
@@ -95,7 +95,7 @@ tags:
 
 直译为**浅层ref**，意味着只有直接改变ref对象的value值会进行响应式更新，若ref对象是个`Object`，改变`Object`内的属性值不会触发渲染更新。
 
-<<< @\codes\vue-demo\pages\vue3\ref\shallowRef.vue
+<<< @/codes/vue-demo/pages/vue3/ref/shallowRef.vue
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/shallowRef.gif)
 
