--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/03.computed和watch.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/03.computed和watch.md
@@ -18,6 +18,6 @@ tags:
 传入一个函数，内部流程如下：
 运行一次函数，运行时访问函数内的变量会自动添加依赖项。若依赖项发生变动，会再次执行当前函数。
 
-<<< @\codes\vue-demo\pages\vue3\computed-and-watch\watchEffect.vue
+<<< @/codes/vue-demo/pages/vue3/computed-and-watch/watchEffect.vue
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/watchEffect.gif)
