--- a/docs/01.前端/04.Webpack/02.css.md
+++ b/docs/01.前端/04.Webpack/02.css.md
@@ -41,13 +41,13 @@ npm install --save-dev style-loader
 
 2.  我们可以在`webpack.config.js`文件中这样引入他们：
 
-<<< @\codes\webpack-demos-pro\css-loader\webpack.config.js{10-17}
+<<< @/codes/webpack-demos-pro/css-loader/webpack.config.js{10-17}
 
 3. 接下来，编写css文件并在js中引入它
 
-<<< @\codes\webpack-demos-pro\css-loader\app.css
+<<< @/codes/webpack-demos-pro/css-loader/app.css
 
-<<< @\codes\webpack-demos-pro\css-loader\main.js
+<<< @/codes/webpack-demos-pro/css-loader/main.js
 
 4. 运行`npm run build`指令，并打开`index.html`文件查看效果。
 
