--- a/docs/01.前端/06.JavaScript/03.观察者模式/01.简介.md
+++ b/docs/01.前端/06.JavaScript/03.观察者模式/01.简介.md
@@ -22,4 +22,4 @@ tags:
 -   `观察目标`维护一个`观察者列表ObserverList`，在`notify`中通知所有`观察者`
 
 # 整体实现：
-<<< @\codes\javaScript\observer-model\basic.js
+<<< @/codes/javaScript/observer-model/basic.js
