--- a/docs/01.前端/06.JavaScript/03.观察者模式/02.将观察者模式用于页面渲染.md
+++ b/docs/01.前端/06.JavaScript/03.观察者模式/02.将观察者模式用于页面渲染.md
@@ -27,8 +27,8 @@ tags:
 
 核心函数`wrapper`，转化`data`为可观测对象
 
-<<< @\codes\javaScript\observer-model\render.js#wrapper
+<<< @/codes/javaScript/observer-model/render.js#wrapper
 
 # 整体实现：
 
-<<< @\codes\javaScript\observer-model\render.js
+<<< @/codes/javaScript/observer-model/render.js
