--- a/docs/01.前端/02.Vue/01.Vue核心概念/01.data.md
+++ b/docs/01.前端/02.Vue/01.Vue核心概念/01.data.md
@@ -54,7 +54,7 @@ var Component = Vue.extend({
 3.  调用`new Vm()`生成实例，事实上就是使用`<vm />`时进行的实例化操作。
 4.  修改某一个实例对象
 
-<<< @\codes\vue-demo\pages\vue2\data.js
+<<< @/codes/vue-demo/pages/vue2/data.js
 
 ::: tip
 js对**对象，数组**的处理和**基本数据对象（如number,string）不同**
