--- a/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
+++ b/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
@@ -31,7 +31,7 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 
 ### 例子一
 
-<<< @\codes\javaScript\observer-model\vue-simulation\demo1.js
+<<< @/codes/javaScript/observer-model/vue-simulation/demo1.js
 
 ::: tip
 关于`target`的使用可能比较令人费解，它在`Watcher`实例化的过程中绑定上`Watcher`的实例，并且在`depend`函数中添加观察者实例。
@@ -45,7 +45,7 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 
 ### 例子二
 
-<<< @\codes\javaScript\observer-model\vue-simulation\demo2.js{9-11,17,21-33}
+<<< @/codes/javaScript/observer-model/vue-simulation/demo2.js{9-11,17,21-33}
 
 -----
 
@@ -60,7 +60,7 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220501172118.png)
 
-<<< @\codes\javaScript\observer-model\vue-simulation\demo3.js{6-12,24-26}
+<<< @/codes/javaScript/observer-model/vue-simulation/demo3.js{6-12,24-26}
 
 事实上，结果和刚才的例二并没有任何区别。
 
@@ -77,7 +77,7 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 
 ### 例子四
 
-<<< @\codes\javaScript\observer-model\vue-simulation\demo4.js{14-16,20-24,28-30,38-58}
+<<< @/codes/javaScript/observer-model/vue-simulation/demo4.js{14-16,20-24,28-30,38-58}
 
 ------
 
@@ -96,5 +96,5 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220501194711.png)
 
 
-<<< @\codes\javaScript\observer-model\vue-simulation\demo5.js
+<<< @/codes/javaScript/observer-model/vue-simulation/demo5.js
 
