--- a/docs/01.前端/06.JavaScript/02.闭包/01.闭包与观察者模式.md
+++ b/docs/01.前端/06.JavaScript/02.闭包/01.闭包与观察者模式.md
@@ -15,7 +15,7 @@ tags:
 
 `闭包`是javaScript的一种特性，先看一个例子：
 
-<<< @\codes\javaScript\closure\index.js
+<<< @/codes/javaScript/closure/index.js
 
 解析：
 -   根据js的**垃圾回收机制**，函数`method`被执行完毕后，其中的变量均被释放，即`变量a`被释放。
@@ -25,7 +25,7 @@ tags:
 
 先来看一段观察者模式代码，[关于观察者模式可以看这里](/categories/?category=观察者模式)
 
-<<< @\codes\javaScript\closure\observer-model.js
+<<< @/codes/javaScript/closure/observer-model.js
 
 可能比较让人疑惑的是这两句代码
 
