--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -19,7 +19,7 @@ tags:
 
 这里我们引入了一个新的概念`transition`。我们会先介绍它，然后再说明为什么它可以解决`Suspense`的闪烁问题。
 
-# 起步
+## 起步
 
 `Transition`是React18中新增的特性，为了了解它的作用，我们需要先介绍`React18`新引进的两个概念`concurrent模式`和`legacy模式`。
 
@@ -55,7 +55,7 @@ root.render(<App/>)
 
 `concurrent`意为“并发的”，是v18新增的一种渲染模式。所有的渲染更新被分为了两种：`高优先级`与`低优先级`。并且**低优先级渲染可以被中断**。
 
-# 应用
+## 应用
 
 我们假设这样一种情况：用户对一个庞大数据的列表进行筛选操作。
 
@@ -102,7 +102,7 @@ root.render(<App/>)
 <<< @/codes/react-demo/src/pages/react18/transition/useTransition.tsx
 
 
-# 回到开头
+## 回到开头
 
 为什么`startTransition`可以解决`Suspense`的闪烁问题？
 
