--- a/docs/01.前端/01.React/01.进阶/04.HOC.md
+++ b/docs/01.前端/01.React/01.进阶/04.HOC.md
@@ -9,13 +9,13 @@ tags:
   - React
 ---
 
-[[toc]]
 
-# HOC是什么？
+
+## HOC是什么？
 
 `higher-order component` : 高阶组件指的是一种**React组件设计模式**，它的实质是用一个函数**接收一个类，添加一些内容，返回一个新类**。其本质就是一个**包装器（装饰器）**。
 
-# 基本使用
+## 基本使用
 
 我们以一个简单的例子来介绍它：
 
@@ -29,7 +29,7 @@ tags:
 关于传递`props`：它将先以`props`属性传入包装器中，再通过`<Component {...this.props} />` 传入子组件上。
 :::
 
-# 使用@语法糖
+## 使用@语法糖
 
 ```js
 LogWrapper(Hoc)
@@ -68,18 +68,18 @@ class Hoc extends Component {
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429141627.png)
 
 
-# @语法糖要怎样传递参数
+## @语法糖要怎样传递参数
 
 前面说到@语法糖会将后面的类作为**第一个参数**传入方法中，如果我们想要传入更多参数，需要**再包装一层函数**，函数的作用是**返回一个包装器**：
 
 <<< @/codes/react-demo/src/pages/react18/HOC/params.jsx{22-24}
 
 
-# 应用：一个简陋的redux模型
+## 应用：一个简陋的redux模型
 
 <<< @/codes/react-demo/src/pages/react18/HOC/redux.jsx
 
-# 关于React developer tools调试HOC
+## 关于React developer tools调试HOC
 
 打开浏览器调试插件，你会在调试器窗口里看到这样的结构：
 
@@ -90,7 +90,7 @@ class Hoc extends Component {
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429150457.png)
 
 
-# 关于实例的获取
+## 关于实例的获取
 
 我们通常会使用`ref`来获取子组件的实例，但如果是一个被HOC包裹的子组件呢？是的，ref会指向HOC而非指向真正的子组件。为了解决这个问题，我们需要使用`forwardRef`，如果你还不清楚`ref`相关的只是，可以参考我的这篇文章[react中的ref](/pages/cda0c4/)。
 
