--- a/docs/01.前端/01.React/01.进阶/05.ref.md
+++ b/docs/01.前端/01.React/01.进阶/05.ref.md
@@ -9,11 +9,11 @@ tags:
   - React
 ---
 
-[[toc]]
+
 
 在各种例子中，我们会见到很多react中和`ref`相关的方法：`useRef,forwardref,createRef,callback ref ....`，在这里对这些方法做一个总结。
 
-# 什么是ref？
+## 什么是ref？
 
 简而言之，ref代表了一个可变的值，它可以是**基本数据类型、DOM元素**等等，它具有以下特点：
 -   ref值进行操作会直接对**真实值**进行修改。
@@ -21,7 +21,7 @@ tags:
 
 在实际场景中，我们常常**用ref来获取DOM组件的实例**，接下来我们主要对这种场景进行讨论
 
-# 基本使用
+## 基本使用
 
 `createRef`，`useRef`功能一致：创建一个ref对象。分别为`React.API`的写法与`hooks`的写法
 
@@ -37,7 +37,7 @@ tags:
 
 
 
-# 子组件Ref实例获取
+## 子组件Ref实例获取
 
 ### React Component
 
@@ -92,7 +92,7 @@ tags:
 - 如果你需要获取子组件的`DOM元素`实例，那么使用`forwardRef`就可以满足需求
 - 如果你想要获取子组件的`属性或方法`，那么需要使用`useImperativeHandle`
 
-# 为什么要谨慎使用ref
+## 为什么要谨慎使用ref
 
 我们在开发组件时通常会将组件当成是一个**黑盒**，只通过其对外暴露的接口对其操作，而对其内部具体的实现逻辑不明。通过接口操作类实例而不是直接操作类实例通常可以更安全的进行开发---这意味着问题的发生只可能出现在暴露接口中。
 
