--- a/docs/01.前端/01.React/01.进阶/08.suspense.md
+++ b/docs/01.前端/01.React/01.进阶/08.suspense.md
@@ -9,15 +9,15 @@ tags:
   - React
 ---
 
-[[toc]]
 
-# 简介
+
+## 简介
 
 `Suspense`是一个实现异步加载数据的React组件，它可以实现懒加载组件、组件动态渲染等功能，它的`fallback`参数可以由用户提供一个组件未加载完成时的渲染组件。
 
 其原理来自于[ErrorBoundary](/pages/1616ee/)
 
-# 懒加载
+## 懒加载
 
 这不是我们今天的主题，这里只给出代码，详细请看[数据懒加载](/pages/326b58/)
 
