--- a/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
+++ b/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
@@ -9,9 +9,9 @@ tags:
   - React
 ---
 
-[[toc]]
 
-# 简介
+
+## 简介
 
 `ErrorBoundary错误边界`是React 16 引入的一个概念，为了捕获局部渲染错误并展示**降级UI（出错时自己定义展示的组件）**。
 :::tip
@@ -24,7 +24,7 @@ tags:
 
 当一个`React Class`使用了`componentDidCatch`或`static getDerivedStateFromError`中的任意一个（或两个）后，组件便成为了一个用于捕获子组件渲染错误的`ErrorBoundary`
 
-# 核心处理函数
+## 核心处理函数
 
 ### componentDidCatch
 
@@ -39,6 +39,6 @@ tags:
 
 直译： **从错误中获取派生的状态**。主要用于修改state，并根据state展示**降级UI**
 
-# 基本使用例子
+## 基本使用例子
 
 <<< @/codes/react-demo/src/pages/react18/errorBoundary.jsx
