--- a/docs/01.前端/01.React/02.SWR/01.入门.md
+++ b/docs/01.前端/01.React/02.SWR/01.入门.md
@@ -11,14 +11,14 @@ tags:
   - React
 ---
 
-[[toc]]
 
-# 安装
+
+## 安装
 ```
 yarn add swr
 ```
 
-#  基本使用
+##  基本使用
 
 ### 首先，我们来看一个传统的请求写法，渲染的组件结构如下
 
