--- a/docs/01.前端/01.React/02.SWR/02.配置和条件渲染.md
+++ b/docs/01.前端/01.React/02.SWR/02.配置和条件渲染.md
@@ -11,14 +11,14 @@ tags:
   - React
 ---
 
-[[toc]]
+
 
 本小节介绍三个内容：
 - 全局配置
 - 静态资源
 - 条件渲染
 
-# 全局配置
+## 全局配置
 
 假设我们和服务端约好了返回格式默认为`JSON格式`，那么默认提供一个`fetcher`方法可以避免在每个请求处都引入相同的方法。
 
@@ -36,7 +36,7 @@ export default Wrapper(组件);
 const [data] = useSwr(url地址)
 ```
 
-# 静态资源
+## 静态资源
 
 因为`Swr`就是为了获取最新数据而存在的，但也许我们的页面中会有一些**不易改变的资源**，这时我们不用每次都发出请求来更新这些数据。
 
@@ -46,7 +46,7 @@ import useSWRImmutable from 'swr/immutable'
 const [data] = useSWRImmutable(url地址)
 ```
 
-# 条件渲染
+## 条件渲染
 
 条件渲染虽然不是`swr`的主题，但却是开发过程中必不可少的一个场景。
 
