--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -11,9 +11,9 @@ tags:
   - recoil
 ---
 
-[[toc]]
 
-# 定义
+
+## 定义
 
 ```js
 function selector<T>({
@@ -37,13 +37,13 @@ function selector<T>({
 })
 ```
 
-# selector可以接收selector，做多层计算
+## selector可以接收selector，做多层计算
 
 以汇率转化为例：
 
 <<< @/codes/react-demo/src/pages/recoil/selector/multiple.jsx
 
-# set方法
+## set方法
 
 默认情况下（不提供`set方法`），`selector`会返回一个只读对象,它的值只能用`useRecoilValue`获取————就像入门篇的那样。但是当你传入了`set`方法后，你就可以用`useRecoilState`同时获取`get和set`方法了。
 
@@ -52,7 +52,7 @@ function selector<T>({
 <<< @/codes/react-demo/src/pages/recoil/selector/set.jsx
 
 
-# 异步Selectors
+## 异步Selectors
 
 想象这样一种场景：用户进入一个商品的详情页面，从路由里取出商品ID，用该ID去数据库查询相应的信息并渲染。
 
@@ -65,7 +65,7 @@ function selector<T>({
 <<< @/codes/react-demo/src/pages/recoil/selector/async.jsx
 
 
-# selectorFamily
+## selectorFamily
 
 你可能注意到，我们开篇给出的`Selector`结构中，并没有给出传入参入的入口。因此，我们想要实现动态传参需要一个新的方法`selectorFamily`
 
