--- a/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
+++ b/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
@@ -9,9 +9,9 @@ tags:
   - Vue核心概念
 ---
 
-[[toc]]
 
-# 为什么需要响应式结构
+
+## 为什么需要响应式结构
 
 Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`getter/setter`（Vue3中使用的是`Proxy`）。当我们访问某一个属性时，就会通知`Watcher`类，并由它及其后续函数来实现页面的重新渲染。
 
@@ -19,13 +19,13 @@ Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`ge
 
 问题的核心在于一个属性会有多个**依赖**，比如对于属性`num`来说，它有一个天生的依赖项`render()`方法，而当用户编写了`computed`属性时，就会有两份依赖项。如何管理这些依赖项，如何实现属性的监听，就是今天的主题：**观察者模式**。如果你对观察者模式还不清楚，可以先看这里:[观察者模式](/categories/?category=观察者模式)。
 
-# 设计
+## 设计
 
 首先，我们再具体将响应式结构的实现分成以下结构：
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220501203815.png)
 
-# 逐步实现
+## 逐步实现
 
 其中比较重要的是`Dep类`和`Watcher类`的实现，我们先来构建一个简单的`Dep,Watcher`模型，在这个模型中，`Dep`添加观察者，并打印观察者的id。
 
