--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
@@ -11,13 +11,13 @@ tags:
   - Vue3
 ---
 
-[[toc]]
 
-# 简介
+
+## 简介
 
 将一个值转化为**响应式的对象**，使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。如果传入的是一个**类Object对象**，则会调用[reactive](/pages/f5d7a4/)进行递归处理。
 
-# 基本使用
+## 基本使用
 
 <<< @/codes/vue-demo/pages/vue3/ref/index.vue
 
@@ -32,19 +32,19 @@ tags:
 :::
 
 
-# unref
+## unref
 
 想要访问`ref对象`需要以`ref.value`进行取值，我们可以方便的用`unref`函数进行解耦操作。
 
 <<< @/codes/vue-demo/pages/vue3/ref/unref.vue
 
-# toRef
+## toRef
 
 该方法在处理响应式对象的**可选属性**上很有用，能够将可选属性转成空的`ref对象`，以便在后续函数中做统一化处理：
 
 <<< @/codes/vue-demo/pages/vue3/ref/toRef.vue
 
-# toRefs
+## toRefs
 
 假设这样一种场景：我们使用`reactive函数`生成了一些响应式对象，我们希望单独操作它的某个属性，我们习惯性的用`Es6`的解构语法获取属性并对其操作：
 
@@ -58,7 +58,7 @@ tags:
 
 <<< @/codes/vue-demo/pages/vue3/ref/toRefs/good.vue{15,20-22}
 
-# customRef
+## customRef
 
 
 `customRef`的原理就是`ES6的Proxy`，我们先来看一个`Proxy`例子：
@@ -91,7 +91,7 @@ tags:
   2.  `value`属性不变，渲染用户输入的值 
 :::
 
-# shallowRef
+## shallowRef
 
 直译为**浅层ref**，意味着只有直接改变ref对象的value值会进行响应式更新，若ref对象是个`Object`，改变`Object`内的属性值不会触发渲染更新。
 
@@ -99,7 +99,7 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/shallowRef.gif)
 
-# triggerRef
+## triggerRef
 
 配合[WatchEffect](/pages/f8fb4f/)手动监听`shallowRef`的数据变化。
 
