--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/02.reactive.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/02.reactive.md
@@ -11,9 +11,9 @@ tags:
   - Vue3
 ---
 
-[[toc]]
 
-# ref 和 reactive 有什么区别？
+
+## ref 和 reactive 有什么区别？
 
 `reactive`相当于`ref`实现过程中的一个函数，它会`Object`对象**递归**套上`Proxy`,使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。
 
