--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/03.computed和watch.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/03.computed和watch.md
@@ -11,9 +11,9 @@ tags:
   - Vue3
 ---
 
-[[toc]]
 
-# watchEffect
+
+## watchEffect
 
 传入一个函数，内部流程如下：
 运行一次函数，运行时访问函数内的变量会自动添加依赖项。若依赖项发生变动，会再次执行当前函数。
