--- a/docs/01.前端/02.Vue/02.Vue3/02.组合式API/00.简介.md
+++ b/docs/01.前端/02.Vue/02.Vue3/02.组合式API/00.简介.md
@@ -11,9 +11,9 @@ tags:
   - Vue
 ---
 
-[[toc]]
 
-# 什么是组件式API？
+
+## 什么是组件式API？
 
 我们先来看下vue2中我们是怎样处理一个组件的代码逻辑的：
 
@@ -33,7 +33,7 @@ tags:
 
 简而言之，**组件式API就是将相关代码编写到一起的一种设计模式。**
 
-# 有哪些内容？
+## 有哪些内容？
 
 -   setup
 -   ref
