--- a/docs/01.前端/02.Vue/04.Nuxt/01.Nuxt3创建项目.md
+++ b/docs/01.前端/02.Vue/04.Nuxt/01.Nuxt3创建项目.md
@@ -10,9 +10,9 @@ tags:
   - 
 ---
 
-[[toc]]
 
-# Nuxt3是什么？
+
+## Nuxt3是什么？
 
 一个实现**无服务器**的web端框架。简单来说，你只需要编写前端代码，后端代码交给云端来实现。
 
@@ -25,7 +25,7 @@ Nuxt包含以下特点：
 
 
 
-# 创建项目
+## 创建项目
 
 **安装依赖，启动项目**
 ```bash
@@ -39,7 +39,7 @@ yarn
 yarn dev -o
 ```
 
-# Hello world
+## Hello world
 打开`App.vue`文件并修改
 
 ```js
@@ -52,7 +52,7 @@ yarn dev -o
 
 ```
 
-# 约定式路由
+## 约定式路由
 
 我们在根目录下新建`pages`文件夹，并新建`pages/foo.vue`文件
 
