--- a/docs/01.前端/06.JavaScript/02.闭包/01.闭包与观察者模式.md
+++ b/docs/01.前端/06.JavaScript/02.闭包/01.闭包与观察者模式.md
@@ -9,9 +9,9 @@ tags:
   - 闭包
 ---
 
-[[toc]]
 
-# 闭包
+
+## 闭包
 
 `闭包`是javaScript的一种特性，先看一个例子：
 
@@ -21,7 +21,7 @@ tags:
 -   根据js的**垃圾回收机制**，函数`method`被执行完毕后，其中的变量均被释放，即`变量a`被释放。
 -   但因为返回值是一个函数,函数中用到了`变量a`，导致`变量a`无法被垃圾回收机制销毁，依然存储在内存中，因此我们可以在抛出的函数中再次操作`变量a`，使其+1并被return出函数
 
-# 观察者模式
+## 观察者模式
 
 先来看一段观察者模式代码，[关于观察者模式可以看这里](/categories/?category=观察者模式)
 
