--- a/docs/01.前端/06.JavaScript/03.观察者模式/01.简介.md
+++ b/docs/01.前端/06.JavaScript/03.观察者模式/01.简介.md
@@ -9,17 +9,17 @@ tags:
   - 观察者模式
 ---
 
-[[toc]]
 
-# 流程：
+
+## 流程：
 1. `观察者`订阅`观察目标`
 2. `观察目标`通知`观察者`，`观察者`进行处理
 
-# 设计：
+## 设计：
 -   `观察者`接受一个函数作为参数，在被通知时执行。
 -   `观察目标`拥有一个`addObserver`方法，用于绑定`观察者`
 -   `观察目标`拥有一个`notify`方法，用于通知`观察者`
 -   `观察目标`维护一个`观察者列表ObserverList`，在`notify`中通知所有`观察者`
 
-# 整体实现：
+## 整体实现：
 <<< @/codes/javaScript/observer-model/basic.js
