--- a/docs/01.前端/06.JavaScript/03.观察者模式/02.将观察者模式用于页面渲染.md
+++ b/docs/01.前端/06.JavaScript/03.观察者模式/02.将观察者模式用于页面渲染.md
@@ -9,18 +9,18 @@ tags:
   - 观察者模式
 ---
 
-[[toc]]
 
-# 对象：
+
+## 对象：
 
 -  观察者：`render`函数
 -  观察目标：`data`数据
 
-# 流程：
+## 流程：
 1.  `render`函数订阅`data`数据
 2.  `data`数据发生变更时,通知`render`，执行`render`函数
 
-# 设计：
+## 设计：
 -   采用`wrapper`包裹`data`使其成为可观测对象，wrapper用`Object.defineProperty`来实现，使`data`发生改变时能够通知`观察者`
 -   对于没有变更的`data属性`不应该触发渲染，所以需要转换每一个`data`对象的子属性成为观察目标，包括`嵌套对象`。使用递归来实现。
 
@@ -29,6 +29,6 @@ tags:
 
 <<< @/codes/javaScript/observer-model/render.js#wrapper
 
-# 整体实现：
+## 整体实现：
 
 <<< @/codes/javaScript/observer-model/render.js
