--- a/docs/03.工具/01.git/02.submodule.md
+++ b/docs/03.工具/01.git/02.submodule.md
@@ -9,9 +9,9 @@ tags:
   - git
 ---
 
-[[toc]]
 
-# 常用命令
+
+## 常用命令
 
 1.  添加一个子模块
 ```
@@ -43,7 +43,7 @@ git rm [子项目名]   // 移除子项目文件夹，并在.gitmodules中删除
 需要手动删除`.git/modules` 目录下的子模块，否则拉取远程子模块代码会先读这里的本地缓存
 :::
 
-# 使用例子
+## 使用例子
 
 ### 初始化
 新建两个仓库`inner-repo 和 nested-repo`
@@ -85,7 +85,7 @@ clone下来后发现子模块的文件夹为空，通过`git submodule update --
 当然，更好的办法是在**clone下仓库后，将子模块的分支从游离分支切换到工作分支上**。这样我们就可以直接在该分支上进行正常开发推送了。
 
 
-# submodule原理
+## submodule原理
 1. 给主仓库添加子模块实际上是添加了一个子模块的**指针**，即子模块`最后一次commit的的hash值`。
 
 ::: tip 
