--- a/docs/03.工具/01.git/03.gitHub-Cli.md
+++ b/docs/03.工具/01.git/03.gitHub-Cli.md
@@ -9,19 +9,19 @@ tags:
   - git
 ---
 
-[[toc]]
 
-# gitHub-cli是什么？
+
+## gitHub-cli是什么？
 
 -   git是一个版本控制系统。
 -   gitHub是一个项目代码的托管平台，因为只支持git，所以叫做gitHub（git 中心）
 -   gitHub-Cli让你可以不用打开网页来操作gitHub，包括**登录、操作issue、pr、release、仓库**等功能
 
-# windows安装
+## windows安装
 打开[githubCli官方网站](https://cli.github.com/)，点击`download for windows`下载
 
 
-# 常用指令
+## 常用指令
 
 ### 登录
 ```bash
