--- a/docs/01.前端/01.React/01.进阶/03.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/03.useReducer.md
@@ -9,9 +9,9 @@ tags:
   - React
 ---
 
-[[toc]]
 
-# 基本使用
+
+## 基本使用
 
 `useReducer`和`useState`很相似，你可以认为它是用来进行**复杂数据处理**的方法。比如一个state有多个需要独立维护的子对象。
 
@@ -49,4 +49,4 @@ tags:
 
 <<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#dispatch{6,14-16}
 
-# 强制刷新
+## 强制刷新
