--- a/docs/01.前端/01.React/01.进阶/03.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/03.useReducer.md
@@ -50,3 +50,9 @@ tags:
 <<< @/codes/react-demo/src/pages/react18/useReducer/index.jsx#dispatch{6,14-16}
 
 ## 强制刷新
+
+```js
+const [_ , forceUpdate] = useReducer(num=>num += 1 , 0)
+
+forceUpdate()
+```
