feat:  Copy Relative Path Posix 插件

--- a/docs/03.工具/03.vscode/01.插件.md
+++ b/docs/03.工具/03.vscode/01.插件.md
@@ -9,8 +9,6 @@ tags:
   - vscode插件
 ---
 
-
-
 ## markdown all in one
 
 ### 快捷键
@@ -36,4 +34,21 @@ tags:
 
 选中文本，`ctrl + v`
 
+ 
+##  Copy Relative Path Posix
 
+如果你有复制相对路径的需要，你会发现，vscode内复制相对路径的效果是这样的：
+
+`docs\03.工具\03.vscode\01.插件.md`
+
+你只需要下载该插件并在文件（夹）上右键选择`Popy Relative Path(Posix)`，即可得到：
+
+`docs/03.工具/03.vscode/01.插件.md`
+
+::: tip 
+`Posix` : `Unix`操作系统的API标准,`linux`同样遵循这个标准
+
+`Posix`使用*斜杆/*作为路径分隔符
+
+`windows`使用*反斜杆\\*作为路径分隔符
+:::
