--- a/docs/01.前端/02.Vue/00.基本使用/01.slot.md
+++ b/docs/01.前端/02.Vue/00.基本使用/01.slot.md
@@ -90,5 +90,34 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220509235051.png)
 
+#### 简写
+
+1.  我们知道，如果有多个`<slot>`标签，那么我们会[使用template的v-slot属性来提供slot名字](##具名插槽)，那么，如果只有一个`slot`标签，`template`是不是显得有些多余了呢？因此，我们可以省略template标签并将v-slot**直接写在组件名上**
+2.  并且，我们也可以不明确指明`v-slot:default=[name]`，而直接使用`v-slot=[name]`，它会默认指向无名的slot插槽
+3.  我们可以在`v-slot`属性上使用**ES5解构语法**
+
+before:
+
+```js
+  <number-list>
+    <template v-slot:default="item">
+         <h1 v-if="item.num === 5">{{ item.num }}</h1>
+         <div v-else>{{ item.num }}</div>
+     </template>
+  </number-list>
+```
+
+later:
+
+```js
+  <number-list v-slot="{ num }">
+      <h1 v-if="num === 5">{{ num }}</h1>
+      <div v-else>{{ num }}</div>
+  </number-list>
+```
+
+
+
+
 
 
