--- a/docs/01.前端/02.Vue/00.基本使用/01.slot.md
+++ b/docs/01.前端/02.Vue/00.基本使用/01.slot.md
@@ -76,6 +76,16 @@ tags:
 
 <<<@/codes/vue-demo/pages/basic/slot/name/index.vue
 
+#### 缩写
+
+你可以直接用`#`来替代`v-slot:`,如：
+
+```js
+<template #header>
+    <div>Header</div>
+</template>
+```
+
 ## 作用域插槽
 
 有时，我们或许想结合子组件的数据进行插槽的渲染。那么我们可以为子组件的`<slot></slot>` 设置一些属性：
@@ -90,7 +100,7 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220509235051.png)
 
-#### 简写
+#### 缩写
 
 1.  我们知道，如果有多个`<slot>`标签，那么我们会[使用template的v-slot属性来提供slot名字](##具名插槽)，那么，如果只有一个`slot`标签，`template`是不是显得有些多余了呢？因此，我们可以省略template标签并将v-slot**直接写在组件名上**
 2.  并且，我们也可以不明确指明`v-slot:default=[name]`，而直接使用`v-slot=[name]`，它会默认指向无名的slot插槽
@@ -116,8 +126,18 @@ later:
   </number-list>
 ```
 
+:::warning
+你可能会想用具名插槽的`#`缩写来替代`v-slot`
 
+**这样写是错误的：**
 
+`#="{ num }"`  
+
+应该写成：
+
+`#default="{ num }"`
+
+:::
 
 
 
