feat: vue- emit、attribute

--- a/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup语法糖.md
@@ -16,3 +16,21 @@ tags:
 ## 首先，让我们来介绍一下setup
 
 如果你已经对js中的Class(类)有了解的话，你很容易就能明白setup函数
+
+
+## defineEmits
+
+如果你刚从React转过来或是Vue新手，请先阅读[emit](/pages/01162a/)。
+
+Vue3中推荐我们对子组件暴露出的`emit`进行声明，[（为什么要进行声明）](/pages/6973ba/#emit)，我们先来看看不使用`setup语法糖`要怎么声明：
+
+<<< @/codes/vue-demo/pages/vue3/setup/emit/old/button.vue
+
+:::tip
+`emits`接收数组和对象作为参数，官网介绍其中的对象可以对`emits`出的函数进行校验。
+
+但事实上，校验不通过只会在控制台打印`Vue warn`，并不会阻止函数的执行。
+
+因暂时没查到应用场景，这里只介绍数组的声明方式。
+:::
+
