feat: emit、props

--- a/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup语法糖.md
@@ -13,9 +13,15 @@ tags:
 
 
 
-## 首先，让我们来介绍一下setup
+## 简介
 
-如果你已经对js中的Class(类)有了解的话，你很容易就能明白setup函数
+`setup函数`，你可以将其理解为`class类`中的`constructor`函数，他表示你可以在组件的初始化过程中进行一些操作。
+
+而`setup语法糖`，你可以直接将整个`<script setup></script>`看作是`setup函数`
+
+::: warngin
+在组件还未初始化时，`this`并不会指向组件实例，所以不要在`setup`函数中通过this进行操作。
+:::
 
 
 ## defineEmits
@@ -27,10 +33,66 @@ Vue3中推荐我们对子组件暴露出的`emit`进行声明，[（为什么要
 <<< @/codes/vue-demo/pages/vue3/setup/emit/old/button.vue
 
 :::tip
-`emits`接收数组和对象作为参数，官网介绍其中的对象可以对`emits`出的函数进行校验。
+`emits`接收数组和对象作为参数，官网介绍**对象的声明方式**可以对`emits`出的函数进行校验。
 
 但事实上，校验不通过只会在控制台打印`Vue warn`，并不会阻止函数的执行。
 
 因暂时没查到应用场景，这里只介绍数组的声明方式。
 :::
 
+然后简单的用`defineEmits`来替代`emits`:
+
+```js
+defineEmits(['parentMethod'])
+```
+
+需要注意的是，在`defineEmits`中使用局部变量会导致编译报错，官方给出的解释是：因为`defineEmits`的参数会在`setup函数`外进行读取（提升到模块的范围）。
+
+```js
+const str = 'parentMethod'
+defineEmits([str])
+
+//报错： [vite] Internal server error: [@vue/compiler-sfc] defineProps() in <script setup> cannot reference locally declared variables because it will be hoisted outside of the setup() function. If your component options require initialization in the module scope, use a separate normal <script> to export the options instead.
+```
+
+如果你需要使用变量，可以用`import`导入相关变量，其同样也会被提升到模块的范围。
+
+```js
+export const emitName = 'parentMethod'
+```
+
+<<< @/codes/vue-demo/pages/vue3/setup/emit/button.vue
+
+#### ts
+
+`Vue3` 推荐使用`TypeScript`进行类型判断，`defineEmits`的TS接口类型为:
+```js
+export declare function defineEmits<TypeEmit>(): TypeEmit;
+```
+
+我们需要通过**泛型**传入`emits`方法的状态声明，再进行调用。即：
+
+```js
+defineEmits<{
+  (参数1 : '函数名', 参数2 : 类型 , ...) : 函数返回值
+}>()
+```
+
+改写一下我们刚才的例子：
+
+```js
+defineEmits<{
+  (e: 'parentMethod', num: number): void
+}>()
+```
+
+
+## defineProps
+
+在`Vue2`中，我们习惯在导出项目的时候声明`props`对象:
+
+<<< @/codes/vue-demo/pages/vue3/setup/props/old/my-button.vue{3,8-12}
+
+而在`Vue3`中，借助`setup语法糖`，我们要做的是在项目初始化时声明props对象,我们使用`defineProps`来获取props对象
+
+<<< @/codes/vue-demo/pages/vue3/setup/props/my-button.vue{3,8-12}
