feat: vue-demo - 渲染函数和h

--- a/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
@@ -15,13 +15,27 @@ tags:
 
 ## 简介
 
-`setup函数`，你可以将其理解为`class类`中的`constructor`函数，他表示你可以在组件的初始化过程中进行一些操作。
+我们先来体验一下语法糖的便捷：
 
-而`setup语法糖`，你可以直接将整个`<script setup></script>`看作是`setup函数`
+<code-group>
+  <code-block title="未使用语法糖" active>
+  
+  <<< @/codes/vue-demo/pages/vue3/setup-candy/export-property/old.vue
 
-::: warngin
-在组件还未初始化时，`this`并不会指向组件实例，所以不要在`setup`函数中通过this进行操作。
-:::
+  </code-block>
+
+  <code-block title="使用语法糖">
+
+  <<<@/codes/vue-demo/pages/vue3/setup-candy/export-property/index.vue
+  
+  </code-block>
+</code-group>
+
+你可以直接将整个`<script setup></script>`看作是`setup函数`，在**由setup包装的script中**
+1.  直接声明的变量会被自动暴露到`template`中，可以直接使用，可以免去在`export default`中声明
+2.  import导入的组件和函数不需要在`components和method`中注册，可以直接使用。
+3.  我们不需要再主动通过`export default`导出当前组件，`setup语法糖`帮助我们自动完成了这一工作
+
 
 
 ## defineEmits
@@ -30,7 +44,7 @@ tags:
 
 Vue3中推荐我们对子组件暴露出的`emit`进行声明，[（为什么要进行声明）](/pages/6973ba/#emit)，我们先来看看不使用`setup语法糖`要怎么声明：
 
-<<< @/codes/vue-demo/pages/vue3/setup/emit/old/button.vue
+<<< @/codes/vue-demo/pages/vue3/setup-candy/emit/old/button.vue
 
 :::tip
 `emits`接收数组和对象作为参数，官网介绍**对象的声明方式**可以对`emits`出的函数进行校验。
@@ -61,7 +75,7 @@ defineEmits([str])
 export const emitName = 'parentMethod'
 ```
 
-<<< @/codes/vue-demo/pages/vue3/setup/emit/button.vue
+<<< @/codes/vue-demo/pages/vue3/setup-candy/emit/button.vue
 
 #### ts
 
@@ -91,8 +105,8 @@ defineEmits<{
 
 在`Vue2`中，我们习惯在导出项目的时候声明`props`对象:
 
-<<< @/codes/vue-demo/pages/vue3/setup/props/old/my-button.vue{3,8-12}
+<<< @/codes/vue-demo/pages/vue3/setup-candy/props/old/my-button.vue{3,8-12}
 
 而在`Vue3`中，借助`setup语法糖`，我们要做的是在项目初始化时声明props对象,我们使用`defineProps`来获取props对象
 
-<<< @/codes/vue-demo/pages/vue3/setup/props/my-button.vue{3,8-12}
+<<< @/codes/vue-demo/pages/vue3/setup-candy/props/my-button.vue{3,8-12}
