feat: vue-setup-context

--- a/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
+++ b/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
@@ -24,7 +24,7 @@ tags:
 
 对象的属性值会被暴露到`template`模板中，例：
 
-<<< @/codes/vue-demo/pages/vue3/setup/index.vue
+<<< @/codes/vue-demo/pages/vue3/setup/return-func-value/index.vue
 
 而`setup`中返回的`ref`对象会被**自动解包**，因此，以上文为例，我们在`template`中不需要通过`title.value`来访问`ref`的值。
 
@@ -34,4 +34,86 @@ tags:
 
 例：
 
-<<< @/codes/vue-demo/pages/vue3/setup/my-button.vue
+<<< @/codes/vue-demo/pages/vue3/setup/return-func-value/button.vue
+
+
+## 参数
+
+### props
+
+`setup`的第一个参数是`props`对象，获取父组件传入的参数，**需要先声明props对象**。
+
+<code-group>
+  <code-block title="vue3" active>
+    <<<@/codes/vue-demo/pages/vue3/setup/props/my-button.vue
+  </code-block>    
+
+  <code-block title="vue2" >
+    <<<@/codes/vue-demo/pages/vue3/setup/props/my-button-old.vue
+  </code-block>   
+</code-group>
+
+值得注意的是，**传入的props对象是响应式的（用reactive包装过的）**,也就是说，虽然setup函数只会执行一次，但若是你绑定了**计算器/侦听器**依赖，其中数据依然会自动更新：
+
+调用：
+
+<<<@/codes/vue-demo/pages/vue3/setup/props/index.vue
+
+效果：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/setup-props.gif)
+
+::: danger
+解耦`props`对象会导致其失去响应性，同[响应式API-refs](/pages/215460/#toRefs)
+:::
+
+我们修改一下刚才的代码：
+
+```js
+  setup({ title }) { 
+        const mixinTitle = computed(() => 'hi ' + title)
+
+        return {
+            mixinTitle
+        }
+    }
+```
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/setup-props-destructure.gif)
+
+你可以使用`toRefs`将`reactive`对象转化为一个`ref`对象来解决这个问题：
+
+```js
+ const { title } = toRefs(props)
+
+ const mixinTitle = computed(() => 'hi ' + title.value)
+```
+
+
+### context
+
+`setup`的第二个参数是`context对象`，直译为“上下文”，它给我们提供四个属性`attrs、slots、emit、expose`
+
+`attrs、slots 和 emit` 分别等同于 `$attrs、$slots 和 $emit` 实例 property。
+
+我们这里以`emit`为例
+
+1.  通过setup的参数获取`emit对象`
+2.  在函数中引用`emit`对象
+3.  在模板中绑定函数
+
+<code-group>
+  <code-block title="vue3" active>
+    <<<@/codes/vue-demo/pages/vue3/setup/context/my-button.vue
+  </code-block>    
+
+  <code-block title="vue2" >
+    ```vue
+    <button @click="$emit('parentMethod', 5)">enlarge button</button>
+    ```
+  </code-block>   
+</code-group>
+
+:::tip
+关于**setup语法糖**中的`emit`用法，请见[setup语法糖](/pages/4b0a99/)
+:::
