--- a/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
@@ -20,13 +20,13 @@ tags:
 <code-group>
   <code-block title="未使用语法糖" active>
   
-  <<< @/codes/vue-demo/pages/vue3/setup-candy/export-property/old.vue
+  <<< @/codes/vue-demo/pages/vue3/setup-candy/basic-use/old.vue
 
   </code-block>
 
   <code-block title="使用语法糖">
 
-  <<<@/codes/vue-demo/pages/vue3/setup-candy/export-property/index.vue
+  <<<@/codes/vue-demo/pages/vue3/setup-candy/basic-use/my-button.vue
   
   </code-block>
 </code-group>
@@ -37,10 +37,9 @@ tags:
 3.  我们不需要再主动通过`export default`导出当前组件，`setup语法糖`帮助我们自动完成了这一工作
 
 
-
 ## defineEmits
 
-如果你刚从React转过来或是Vue新手，请先阅读[emit](/pages/01162a/)。
+如果你对`emit`还不了解，请先阅读[emit](/pages/01162a/)。
 
 Vue3中推荐我们对子组件暴露出的`emit`进行声明，[（为什么要进行声明）](/pages/6973ba/#emit)，我们先来看看不使用`setup语法糖`要怎么声明：
 
@@ -54,11 +53,9 @@ Vue3中推荐我们对子组件暴露出的`emit`进行声明，[（为什么要
 因暂时没查到应用场景，这里只介绍数组的声明方式。
 :::
 
-然后简单的用`defineEmits`来替代`emits`:
+`defineEmits`函数帮我们声明`emits`并且返回一个`emit`对象。[原本是从setup参数中取出emit对象，并在export default中声明emits](/pages/2d2098/#context)
 
-```js
-defineEmits(['parentMethod'])
-```
+<<< @/codes/vue-demo/pages/vue3/setup-candy/emit/button.vue
 
 需要注意的是，在`defineEmits`中使用局部变量会导致编译报错，官方给出的解释是：因为`defineEmits`的参数会在`setup函数`外进行读取（提升到模块的范围）。
 
@@ -77,7 +74,7 @@ export const emitName = 'parentMethod'
 
 <<< @/codes/vue-demo/pages/vue3/setup-candy/emit/button.vue
 
-#### ts
+#### TypeScript
 
 `Vue3` 推荐使用`TypeScript`进行类型判断，`defineEmits`的TS接口类型为:
 ```js
@@ -107,6 +104,6 @@ defineEmits<{
 
 <<< @/codes/vue-demo/pages/vue3/setup-candy/props/old/my-button.vue{3,8-12}
 
-而在`Vue3`中，借助`setup语法糖`，我们要做的是在项目初始化时声明props对象,我们使用`defineProps`来获取props对象
+而在`Vue3`中，借助`setup语法糖`，我们要做的是在项目初始化之前声明props对象,我们使用`defineProps`来获取props对象
 
 <<< @/codes/vue-demo/pages/vue3/setup-candy/props/my-button.vue{3,8-12}
