--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API-refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API-refs.md
@@ -15,7 +15,7 @@ tags:
 
 ## 简介
 
-将一个值转化为**响应式的对象**，使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。如果传入的是一个**类Object对象**，则会调用[reactive](/pages/f5d7a4/)进行递归处理。
+将一个值转化为**响应式的对象**，使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。如果传入的是一个**类Object对象**，则会调用[reactive](/pages/f5d7a4/)进行递归处理。[对ref对象解耦不丢失响应式，但reactive对象会丢失响应性](#toRefs)
 
 ## 基本使用
 
