feat : defineProps 、 withDefaults

--- a/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
+++ b/docs/01.前端/02.Vue/02.Vue3/05.组合式API-setup.md
@@ -34,7 +34,7 @@ tags:
 
 例：
 
-<<< @/codes/vue-demo/pages/vue3/setup/return-func-value/button.vue
+<<< @/codes/vue-demo/pages/vue3/setup/return-func-value/my-button.vue
 
 
 ## 参数
@@ -114,6 +114,10 @@ tags:
   </code-block>   
 </code-group>
 
-:::tip
 关于**setup语法糖**中的`emit`用法，请见[setup语法糖](/pages/4b0a99/)
+
+:::tip
+你依然可以在模板中使用`$attrs、$slots 和 $emit`， 以`emit`为例
+
+`$emit`、`setup(props,{emit})`、`defineEmit()`三种写法并不互斥。
 :::
