--- a/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/06.组合式API-setup语法糖.md
@@ -13,7 +13,7 @@ tags:
 
 
 
-## 简介
+## 基本使用
 
 我们先来体验一下语法糖的便捷：
 
@@ -35,6 +35,77 @@ tags:
 1.  直接声明的变量会被自动暴露到`template`中，可以直接使用，可以免去在`export default`中声明
 2.  import导入的组件和函数不需要在`components和method`中注册，可以直接使用。
 3.  我们不需要再主动通过`export default`导出当前组件，`setup语法糖`帮助我们自动完成了这一工作
+
+-------
+
+我们之前会从`setup()`的参数中获取`props,context`进行数据操作，我们接下来会依次介绍语法糖中这些数据的替代方案
+
+- props == [defineProps](#defineProps)
+- context.emit == [deineEmits](#deineEmits)
+- context.expose == [defineExpose](#defineExpose)
+- context.slots || context.attrs == [useSlots 和 useAttrs](#useSlots 和 useAttrs)
+
+
+## defineProps
+
+`defineProps` 返回一个只读对象，可以在`defineProps`的`ts`定义中看到
+
+```js
+export declare function defineProps<TypeProps>(): Readonly<TypeProps>;
+```
+
+这意味着我们如果想要修改`defineProps`返回的`props`对象是无效的————即使我们将其转化为可相应的`ref对象`:
+
+<<< @/codes/vue-demo/pages/vue3/setup-candy/props/my-button-readyOnly.vue
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/defineProps.gif)
+
+
+#### TypeScript
+
+我们需要通过**泛型**传入`props`的结构类型，再进行调用。
+
+```ts
+interface IProps {
+    title: string
+}
+
+const props = defineProps<IProps>()
+```
+
+#### 默认值
+
+我们会习惯性的在解构的变量中添加`= xxx`来设置某个变量为空时的默认值：比如：
+
+<<< @/codes/vue-demo/pages/vue3/setup-candy/props/my-button-default-bad.vue
+
+但`defineProps`只会对父组件传入时的接口处进行typeScript校验,如：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220513135719.png)
+
+而有时我们会在子组件内对变量进行默认值设置，这时并不会进行类型校验：
+
+<<<@/codes/vue-demo/pages/vue3/setup-candy/props/my-button-default-bad.vue
+
+为此，我们需要使用**withDefaults**进行默认值的设置：
+
+`withDefaults`的函数定义为：
+```js
+withDefaults(
+  defineProps定义的props对象（ts类型）,
+  Props的默认对象Object
+)
+```
+
+```ts
+interface IProps {
+    title?: string
+}
+
+const props = withDefaults(defineProps<IProps>(), {
+    title: 'default title' // 会提供对title的类型检查
+})
+```
 
 
 ## defineEmits
@@ -76,13 +147,12 @@ export const emitName = 'parentMethod'
 
 #### TypeScript
 
-`Vue3` 推荐使用`TypeScript`进行类型判断，`defineEmits`的TS接口类型为:
+`defineEmits`的TS接口类型为:
+
 ```js
 export declare function defineEmits<TypeEmit>(): TypeEmit;
 ```
-
-我们需要通过**泛型**传入`emits`方法的状态声明，再进行调用。即：
-
+我们可以这样定义`emit函数类型`
 ```js
 defineEmits<{
   (参数1 : '函数名', 参数2 : 类型 , ...) : 函数返回值
@@ -97,13 +167,22 @@ defineEmits<{
 }>()
 ```
 
+::: warning
+函数的第一个参数必须是父组件传入的**函数名字符串**,事实上，`emit`Vue内部的处理是**单独取出第一个参数，到当前实例的_event属性（事件中心）获取对应事件。再将后续参数args传入真实事件中**。
 
-## defineProps
+个人的理解是，函数名会作为`key值`匹配每一个`emit`方法。只有完整匹配了函数名，后续参数的ts类型推断才会有效。
+:::
 
-在`Vue2`中，我们习惯在导出项目的时候声明`props`对象:
 
-<<< @/codes/vue-demo/pages/vue3/setup-candy/props/old/my-button.vue{3,8-12}
+## defineExpose
 
-而在`Vue3`中，借助`setup语法糖`，我们要做的是在项目初始化之前声明props对象,我们使用`defineProps`来获取props对象
+## useSlots 和 useAttrs
 
-<<< @/codes/vue-demo/pages/vue3/setup-candy/props/my-button.vue{3,8-12}
+```vue
+<script setup>
+import { useSlots, useAttrs } from 'vue'
+
+const slots = useSlots()
+const attrs = useAttrs()
+</script>
+```
